# taunicorn

./: Cargo.toml  LICENSE-MIT  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: README.md  pyproject.toml
docs/images/: server_with_id.rs
docs/images/examples_v1/: main.py  new_client_example.py
docs/images/v1/: new_client.rs  new_server.rs
docs/taunicorn/: _taunicorn.pyi
examples/: asgi_http_client.py  asgi_http_server.py  client.py  new_server_example.py  server.py  simple_client.py  simple_server.py
src/: channel.rs  client.rs  lib.rs  new_ipc_sys.py  new_ipc_sys.rs  python.rs  server.rs  utils.rs
taunicorn/: __init__.py  _new_taunicorn.pyi  _taunicorn.pyi  utils.py
