[package]
name = "taunicorn"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_taunicorn"
crate-type = ["cdylib"]

[dependencies]
log = "0.4.29"
pyo3-async-runtimes = { version = "0.27", features = ["tokio-runtime"] }
pyo3-async-runtimes-macros = "0.27"
anyhow = "1.0.91"
pyo3 = { version = "=0.27", features = ["anyhow", "bytes", "extension-module", "generate-import-lib"] }
pyo3-log = { version = "=0.13", git = "https://github.com/gi0baro/pyo3-log.git", branch = "pyo3-027" }
interprocess = { version = "2.2.3", features = ["tokio"] }
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "io-util", "sync", "time", "macros", "signal"] }
tokio-stream = { version = "0.1.17", features = ["io-util"] }
tokio-util = { version = "0.7.17", features = ["codec", "io"] }
futures = "0.3.31"
thiserror = "2.0.17"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
httparse = "1.10.1"
http = "1.4.0"
bytes = "1.11.0"
tracing = "0.1.43"
parking_lot = "0.12.5"
pin-project-lite = "0.2.16"
toml = "0.9.8"
rand = "0.9.2"
path-tree = {version = "0.8.3", optional = true}
url = "2.5.7"

[target.'cfg(unix)'.dependencies]
libc = "0.2.178"

[target.'cfg(windows)'.dependencies]
widestring = "1.2.1"

[dev-dependencies]
dotenvy = "0.15.7"
criterion = { version = "=0.7", features = ["async"] }
async-trait = "0.1.89"
tracing-subscriber = "0.3.22"
chrono = { version = "0.4.42", default-features = false, features = ["std", "clock"] }


[lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
panic = "deny"
unimplemented = "deny"
todo = "warn"
dbg_macro = "warn"
clone_on_ref_ptr = "warn"
rc_clone_in_vec_init = "warn"
large_stack_arrays = "warn"
large_const_arrays = "warn"
async_yields_async = "deny"
mutex_atomic = "deny"
mutex_integer = "deny"
rc_mutex = "deny"
unused_async = "deny"
await_holding_lock = "deny"
large_futures = "deny"
future_not_send = "deny"
redundant_else = "deny"
needless_continue = "deny"
needless_raw_string_hashes = "deny"
or_fun_call = "deny"
cognitive_complexity = "deny"
useless_let_if_seq = "deny"
use_self = "deny"
tuple_array_conversions = "deny"
trait_duplication_in_bounds = "deny"
suspicious_operation_groupings = "deny"
string_lit_as_bytes = "deny"
significant_drop_tightening = "deny"
significant_drop_in_scrutinee = "deny"
redundant_clone = "deny"
needless_pass_by_ref_mut = "deny"
needless_collect = "deny"
missing_const_for_fn = "deny"
iter_with_drain = "deny"
iter_on_single_items = "deny"
iter_on_empty_collections = "deny"
equatable_if_let = "deny"
collection_is_never_read = "deny"
branches_sharing_code = "deny"
pathbuf_init_then_push = "deny"
option_as_ref_cloned = "deny"
large_types_passed_by_value = "deny"
expl_impl_clone_on_copy = "deny"
copy_iterator = "deny"
cloned_instead_of_copied = "deny"
unnecessary_self_imports = "deny"
unused_trait_names = "deny"
wildcard_imports = "deny"
unnecessary_wraps = "deny"